[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/resources/fonts/montserrat_20.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/main/menus/multiplayer/TitleText.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/menus/multiplayer/buttons/MainServer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/menus/multiplayer/buttons/DirectConnect.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/menus/multiplayer/buttons/Back.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/menus/multiplayer/multiplayer.gd" type="Script" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://src/resources/fonts/montserrat.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[node name="Multiplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 50.0
margin_right = 900.0
margin_bottom = 540.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButton" parent="Content" instance=ExtResource( 2 )]
margin_right = 780.0
margin_bottom = 100.0

[node name="Center" type="VBoxContainer" parent="Content"]
margin_top = 100.0
margin_right = 780.0
margin_bottom = 441.0
size_flags_vertical = 3
alignment = 1

[node name="ErrorText" type="Label" parent="Content/Center"]
margin_right = 780.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.219608, 0.219608, 1 )

[node name="UsernameTextbox" type="LineEdit" parent="Content/Center"]
margin_top = 27.0
margin_right = 400.0
margin_bottom = 82.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
max_length = 14
placeholder_text = "Username"

[node name="HostTextbox" type="LineEdit" parent="Content/Center"]
visible = false
margin_top = 89.0
margin_right = 400.0
margin_bottom = 144.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
max_length = 20
placeholder_text = "Host Address"

[node name="Buttons" type="VBoxContainer" parent="Content/Center"]
margin_top = 86.0
margin_right = 500.0
margin_bottom = 341.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="MainServer" parent="Content/Center/Buttons" instance=ExtResource( 3 )]
margin_top = 24.0
margin_bottom = 90.0

[node name="DirectConnect" parent="Content/Center/Buttons" instance=ExtResource( 4 )]
margin_top = 94.0
margin_bottom = 160.0

[node name="Back" parent="Content/Center/Buttons" instance=ExtResource( 5 )]
margin_top = 164.0
margin_bottom = 230.0
scene_to_load = "res://src/main/menus/title/Title.tscn"

[node name="FooterText" type="Label" parent="Content"]
margin_top = 441.0
margin_right = 780.0
margin_bottom = 490.0
custom_fonts/font = ExtResource( 1 )
text = "Version 0.1.1
VGDC at UCI"
[connection signal="button_down" from="Content/Center/Buttons/MainServer" to="." method="_on_main_server_button_pressed"]
[connection signal="button_down" from="Content/Center/Buttons/DirectConnect" to="." method="_on_direct_connect_button_pressed"]
